add swagger and docs, update compose for watch feature

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,15 @@ services:
       - rabbitmq
     networks:
       - ecommerce-network
+    develop:
+      watch:
+        - action: sync
+          path: ./src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: package.json
 
   # PostgreSQL Database
   postgres:
