--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "redis": "^5.8.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
