--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "es:init": "tsx src/scripts/init-elasticsearch.ts",
+    "es:reindex": "tsx src/scripts/reindex-products.ts"
   },
   "keywords": [
     "nodejs",
@@ -30,6 +32,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@elastic/elasticsearch": "^9.1.0",
     "@prisma/client": "^6.13.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -38,8 +41,10 @@
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "redis": "^5.8.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
