--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
+    "kafkajs": "^2.2.4",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "redis": "^5.8.0",
