--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "dev": "nodemon --legacy-watch --polling-interval 1000 --exec tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "worker": "nodemon --legacy-watch --polling-interval 1000 --exec tsx src/workers/event-processor.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "format": "prettier --write src/**/*.ts",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write .",
     "health-check": "curl -f http://localhost:3000/health || exit 1",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
