--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "worker": "nodemon --legacy-watch --polling-interval 1000 --exec tsx src/workers/event-processor.ts",
+    "notification-worker": "nodemon --legacy-watch --polling-interval 1000 --exec tsx src/workers/notification-worker.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts",
@@ -35,6 +36,8 @@
   "dependencies": {
     "@elastic/elasticsearch": "^9.1.0",
     "@prisma/client": "^6.13.0",
+    "@types/nodemailer": "^6.4.17",
+    "amqplib": "^0.10.8",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -44,11 +47,13 @@
     "kafkajs": "^2.2.4",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5",
     "redis": "^5.8.0",
     "swagger-ui-express": "^5.0.1",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.3",
